chore: update policies link

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -1,7 +1,7 @@
 ---
 title: Read the transportation programmer policies
 description: >
-  This document lives in [one-drive](https://umass-my.sharepoint.com/).
+  This document lives in [one-drive](https://umass.sharepoint.com/:b:/r/sites/TransportationIT/Shared%20Documents/Programmer%20Training/UMass%20Transportation%20Student%20Programmer%20Policies.pdf).
 ---
 title: Read through university owned computer policies
 description: >
