chore: add VSCode link

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -27,7 +27,7 @@ subtasks:
   - Install [`nodenv`](https://github.com/rbenv/nodenv)
   - Install [`rbenv`](https://github.com/rbenv/rbenv)
   - Prepare an [`ssh` key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
-  - Install a text editor/ide of your choice (i.e. VSCode)
+  - Install a text editor/ide of your choice (e.g. [VSCode](https://code.visualstudio.com))
 ---
 title: Configure GitHub
 description: >
