chore: offer codeacademy course instead of video

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -57,10 +57,9 @@ description: >
 ---
 title: Complete a ruby tutorial
 description: >
-  There are many Ruby tutorials available which you can choose from. Log in for
-  free using your UMass account and watch [these videos](https://learning.oreilly.com/videos/ruby-fundamentals/300000006A0154),
-  or you can download the [Ruby Koans](http://rubykoans.com/). If neither of those
-  options appeal to you you may choose another tutorial with your supervisor's approval.
+  There are many Ruby tutorials available which you can choose from. Download the [Ruby Koans](http://rubykoans.com/),
+  or the free [codeacademy](https://www.codecademy.com/learn/learn-ruby) course.
+  If neither of those options appeal to you you may choose another tutorial with your supervisor's approval.
 ---
 title: Complete a rails tutorial
 description: >
