--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -21,8 +21,7 @@ title: Prepare a development environment
 description: >
   Work with another developer to set up the following items:
 subtasks:
-  - Install the xcode command line tools (`xcode-select –install`)
-  - Install [`homebrew`](https://brew.sh)
+  - Use [`strap`](https://strap.umasstransit.it/) to configure macOS
   - Install [`mariadb`](https://formulae.brew.sh/formula/mariadb)
   - Install [`rbenv`](https://github.com/rbenv/rbenv)
   - Install [`nodenv`](https://github.com/nodenv/nodenv)
