update Univ computer polices links

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -9,8 +9,7 @@ description: >
   sensitive data, you must review these documents
 subtasks:
   - '[Security Checklist](https://www.umass.edu/it/support/security/security-checklist-university-owned-computers)'
-  - '[Understanding Sensitive Data](https://www.umass.edu/it/support/security/understand-sensitive-data-umass-amherst)'
-  - '[Data Classification](https://www.umass.edu/it/support/security/data-classification-umass-amherst)'
+  - '[Data Categorization](https://www.umass.edu/it/security/data-categorization)'
 ---
 title: Join Teams
 description: >
