New docs action
I'm also checking the new "ruleset" by starting with a PR against
`test-main`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,11 @@ on:
   pull_request:
     branches:
       - main
+      - test-main
   push:
     branches:
       - main
+      - test-main
 jobs:
   main:
     runs-on: ubuntu-latest
