--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,30 +3,48 @@ on:
   push:
     branches:
       - main
+      - test-main
     paths:
       - 'README.md'
       - 'lib/**/*.rb'
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/create-github-app-token@v1
+        id: docs-github-app-token
+        with:
+          app_id: ${{ vars.DOCS_APP_ID }}
+          private_key: ${{ secrets.DOCS_APP_SECRET_KEY }}
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.docs-github-app-token.outputs.token }}
+      - uses: ./.github/actions/setup
+
   rdoc:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
       - run: 'bin/rake rdoc'
+
+  commit_docs:
+    runs-on: ubuntu-latest
+    needs: rdoc
+    steps:
       - run: |-
           git config --global user.name 'GitHub Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add docs/
           git commit -m 'Update documentation' || true
           git push
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./docs
-  deploy:
+
+  deploy_pages:
     runs-on: ubuntu-latest
     needs: rdoc
     permissions:
       pages: write
       id-token: write
     steps:
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs
       - uses: actions/deploy-pages@v4
