--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ on:
       - 'README.md'
       - 'lib/**/*.rb'
 jobs:
-  setup:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/create-github-app-token@v1
@@ -20,32 +20,22 @@ jobs:
         with:
           token: ${{ steps.docs-github-app-token.outputs.token }}
       - uses: ./.github/actions/setup
-
-  rdoc:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
       - run: 'bin/rake rdoc'
-
-  commit_docs:
-    runs-on: ubuntu-latest
-    needs: rdoc
-    steps:
       - run: |-
           git config --global user.name 'GitHub Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add docs/
           git commit -m 'Update documentation' || true
           git push
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs
 
-  deploy_pages:
+  deploy:
     runs-on: ubuntu-latest
     needs: rdoc
     permissions:
       pages: write
       id-token: write
     steps:
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./docs
       - uses: actions/deploy-pages@v4
