--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
           git config --global user.name 'GitHub Actions'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git add docs/
-          git commit -m 'Update documentation' || true
+          git commit -m 'Update documentation [skip ci]' || true
           git push
       - uses: actions/upload-pages-artifact@v3
         with:
