Update AFIT and UMassIT links

--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -8,8 +8,8 @@ description: >
   Since you will be trusted with university-owned computers and potentially
   sensitive data, you must review these documents
 subtasks:
-  - '[Security Checklist](https://www.umass.edu/it/support/security/security-checklist-university-owned-computers)'
-  - '[Data Categorization](https://www.umass.edu/it/security/data-categorization)'
+  - '[Security and Safety](https://www.umass.edu/afsystems/basic-page/guides-security-and-safety/330)'
+  - '[Service Categorizations](https://www.umass.edu/it/security/service-categorizations)'
 ---
 title: Join Teams
 description: >
