--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -6,9 +6,8 @@ description: >
 title: Read through university owned computer policies
 description: >
   Since you will be trusted with university-owned computers and potentially
-  sensitive data, you must review these documents
-subtasks:
-  - '[Service Categorizations](https://www.umass.edu/it/security/service-categorizations)'
+  sensitive data, you must review the [Service Categorizations](https://www.umass.edu/it/security/service-categorizations) 
+  document.
 ---
 title: Join Teams
 description: >
