Two new docs workflow triggers:
1. Manual workflow dispatch
2. If the docs are, themselves, manually updated

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,13 @@
 name: docs
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
       - 'README.md'
       - 'lib/**/*.rb'
+      - 'docs/**/*'
 jobs:
   build:
     runs-on: ubuntu-latest
