--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-require:
+plugins:
   - rubocop-rake
   - rubocop-rspec
 
@@ -7,9 +7,6 @@ AllCops:
   Exclude:
     - 'bin/**/*'
     - 'vendor/**/*'
-
-Layout/LineLength:
-  Max: 100
 
 Metrics/BlockLength:
   AllowedMethods:
