--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,12 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
       - uses: actions/create-github-app-token@v1
         id: docs-github-app-token
         with:
           app-id: ${{ vars.DOCS_APP_ID }}
           private-key: ${{ secrets.DOCS_APP_SECRET_KEY }}
+          repositories: ${{ github.repository }}
+          permission-contents: write
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.docs-github-app-token.outputs.token }}
