--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           app-id: ${{ vars.DOCS_APP_ID }}
           private-key: ${{ secrets.DOCS_APP_SECRET_KEY }}
-          repositories: ${{ github.repository }}
+          owner: umts
+          repositories: dev-training-web
           permission-contents: write
       - uses: actions/checkout@v4
         with:
