--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -19,7 +19,7 @@ description: >
   Work with another developer to set up the following items:
 subtasks:
   - Use [`strap`](https://strap.umasstransit.it/) to configure macOS
-  - Install [`mariadb`](https://formulae.brew.sh/formula/mariadb)
+  - Install [`mysql`](https://formulae.brew.sh/formula/mysql)
   - Install [`rbenv`](https://github.com/rbenv/rbenv)
   - Install [`nodenv`](https://github.com/nodenv/nodenv)
   - Prepare an [`ssh` key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
