--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -39,10 +39,12 @@ subtasks:
 title: Complete a command line tutorial
 description: >
   Having a good grasp of the command line is essential for working in our team,
-  as we use the command line every single day for various tasks
-  Use the first couple chapters of [this tutorial](https://www.learnenough.com/command-line-tutorial/basics)
-  or another approved tutorial to brush up on your basics, and link to it in a
-  comment to close this issue.
+  as we use the command line every single day for various tasks.
+
+  Work through [Software Carpentry's Unix Shell Course](https://swcarpentry.github.io/shell-novice/) to
+  get the basics down.
+
+  Check in with your lead developer to review the materials and have any questions answered before closing this issue.
 ---
 title: Complete a git tutorial
 description: >
