--- a/config/qualifications.yml
+++ b/config/qualifications.yml
@@ -19,9 +19,6 @@ description: >
   Work with another developer to set up the following items:
 subtasks:
   - Use [`strap`](https://strap.umasstransit.it/) to configure macOS
-  - Install [`mariadb`](https://formulae.brew.sh/formula/mariadb)
-  - Install [`rbenv`](https://github.com/rbenv/rbenv)
-  - Install [`nodenv`](https://github.com/nodenv/nodenv)
   - Prepare an [`ssh` key](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)
   - Install a text editor/ide of your choice (e.g. [VSCode](https://code.visualstudio.com))
 ---
@@ -39,35 +36,62 @@ subtasks:
 title: Complete a command line tutorial
 description: >
   Having a good grasp of the command line is essential for working in our team,
-  as we use the command line every single day for various tasks
-  Use the first couple chapters of [this tutorial](https://www.learnenough.com/command-line-tutorial/basics)
-  or another approved tutorial to brush up on your basics, and link to it in a
-  comment to close this issue.
+  as we use the command line every single day for various tasks.
+
+  Work through [Software Carpentry's Unix Shell Course](https://swcarpentry.github.io/shell-novice/) to
+  get the basics down.
+
+  Reach out to your lead developer on Teams to review the materials and have any questions answered once you are finished.
 ---
 title: Complete a git tutorial
 description: >
-  We use Git in combination with Github to work collaboratively on our code.
-  Log in to O'Reilly's learning tools for free with your UMass account and
-  complete [this](https://learning.oreilly.com/videos/git-essentials-become/9781800565630/)
-  or another approved tutorial and link to it in a comment to close this issue.
+  We use Git as version control and to work collaboratively on our code.
+
+  Work through the relevant sections of the [Pro Git Book](https://git-scm.com/book/en/v2):
+  - [ ] 1.1 - 1.4
+  - [ ] 2.1 - 2.5
+  - [ ] 3.1 - 3.7 (Whole chapter)
+
+  Reach out to your lead developer on Teams to review the materials and have any questions answered once you are
+  finished.
 ---
 title: Complete a ruby tutorial
 description: >
-  There are many Ruby tutorials available which you can choose from. Download the [Ruby Koans](http://rubykoans.com/),
-  or the free [codeacademy](https://www.codecademy.com/learn/learn-ruby) course.
-  If neither of those options appeal to you you may choose another tutorial with your supervisor's approval.
+  The majority of our applications are written in ruby.
+
+  Work through the [Ruby Koans](http://rubykoans.com/), which are a set of worksheets that teach you ruby
+  syntax/concepts as you go.
+
+  Reach out to your lead developer on Teams to get set up properly before starting.
+  
+  Reach out to your lead developer on Teams to review the materials and have any questions answered once you are
+  finished.
+---
+title: Complete a web development crash course
+description: >
+  We write and maintain web applications, so an understanding of web technologies is essential.
+
+  Meet with your lead developer to go over fundamentals and architecture, relational databases, as well as basic
+  HTML/CSS/JS.
 ---
 title: Complete a rails tutorial
 description: >
-  The current tutorial in use is Michael Hartl's [Ruby on Rails Tutorial](https://learning.oreilly.com/library/view/ruby-on-rails/9780136702726/).
-  Log in for free using your UMass account to O'Reilly or, if you wish to use an alternate tutorial, talk to your supervisor.
+  A smaller majority of our applications are written with Ruby on Rails.
 
-  You can follow the tutorial pretty closely, except for the following caveats below.
-  - In section 1.1.1 "Development environment", don't set up cloud9.
-    Your laptop has been set up with a development environment.
-  - In section 1.4.1 "Heroku setup and Deployment", there are instructions to set up a Heroku account to deploy your code to.
-    Since you'll be deploying code to production in a few short months, you can skip setting up a heroku account
-    and all related steps.
+  Work through [The Odin Project's Ruby on Rails Course](https://www.theodinproject.com/paths/full-stack-ruby-on-rails/courses/ruby-on-rails),
+  which will expose you to all the Rails subsystems.
+
+  Reach out to your lead developer on Teams to get set up properly before starting and in-between each module.
+
+  There are some sections you will need to skip or get alternative explanations/directions about as well.
+  Reach out to your lead developer on Teams before starting:
+  - All Projects (i.e. lessons starting with "Project:")
+  - Introduction / Installing PostgreSQL
+  - Rails Basics / Deployment
+  - Assets and Navigation / Importmaps
+  - Assets and Navigation / Turbo Drive
+  - APIs / Working with External APIs
+  - Rails Sprinkles (entire module)
 ---
 title: Demonstrate an understanding of correct and proper git usage
 description: >
